--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: rgb(240, 253, 244);
+}
 
-body{
-    background-color: rgb(240, 253, 244);
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  color: #a8dadc;
+}
+
+.swiper-pagiantion-progressbar .swiper-pagination-progressbar-fill {
+  background: #a8dadc !important;
 }
