--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,17 @@ body {
 
 .swiper-button-next:after,
 .swiper-button-prev:after {
-  color: #a8dadc;
+  color: #25a8bf;
 }
 
 .swiper-pagiantion-progressbar .swiper-pagination-progressbar-fill {
   background: #a8dadc !important;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
 }
